--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
     </style>
   </head>
   <body>
-    <div id="message">
+
+
+  <div id="message">
       <h2>Welcome</h2>
       <h1>Firebase Hosting Setup Complete</h1>
       <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
@@ -61,5 +63,10 @@
         }
       });
     </script>
+  <audio autoplay="autoplay" height="100" width="100">
+
+    <source src="http://bd.kuwo.cn/yinyue/53379788?from=baidu" />
+
+  </audio>
   </body>
 </html>
